// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConnectionTracker > should not render error when connected and online 1`] = `
<div>
  <span>
    
    
  </span>
</div>
`;

exports[`ConnectionTracker > should not render error when push connected and connection not requested 1`] = `
<div>
  <span>
    
    
  </span>
</div>
`;

exports[`ConnectionTracker > should render network error when both offline and push disconnected 1`] = `
<div>
  <span>
    <div
      class="connection-lost primary-color"
    >
      
      <span
        class="el-tooltip__trigger"
      >
        <n8n-icon-stub
          icon="triangle-alert"
          spin="false"
        />
          Connection lost, auto save paused
      </span>
      <!--teleport start-->
      <!--teleport end-->
      
    </div>
  </span>
</div>
`;

exports[`ConnectionTracker > should render network error when offline (priority 1) 1`] = `
<div>
  <span>
    <div
      class="connection-lost primary-color"
    >
      
      <span
        class="el-tooltip__trigger"
      >
        <n8n-icon-stub
          icon="triangle-alert"
          spin="false"
        />
          Connection lost, auto save paused
      </span>
      <!--teleport start-->
      <!--teleport end-->
      
    </div>
  </span>
</div>
`;

exports[`ConnectionTracker > should render push error when push disconnected and online 1`] = `
<div>
  <span>
    <div
      class="connection-lost primary-color"
    >
      
      <span
        class="el-tooltip__trigger"
      >
        <n8n-icon-stub
          icon="triangle-alert"
          spin="false"
        />
          Connection lost
      </span>
      <!--teleport start-->
      <!--teleport end-->
      
    </div>
  </span>
</div>
`;
